recorder: Do not keep two sequences at the same time

It doesn't make much sense.

BUG: 458795